控制台页面设计

--- a/TDWT_MSG/数据统计.html
+++ b/TDWT_MSG/数据统计.html
@@ -551,7 +551,7 @@
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u129" class="ax_default primary_button">
+              <div id="u129" class="ax_default primary_button" title="目前调整到第三方平台">
                 <div id="u129_div" class=""></div>
                 <div id="u129_text" class="text ">
                   <p><span>行为统计</span></p>
@@ -559,7 +559,7 @@
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u130" class="ax_default primary_button">
+              <div id="u130" class="ax_default primary_button" title="目前调整到第三方平台">
                 <div id="u130_div" class=""></div>
                 <div id="u130_text" class="text ">
                   <p><span>异常统计</span></p>
