--- a/TDWT_MSG/费用管理.html
+++ b/TDWT_MSG/费用管理.html
@@ -694,7 +694,7 @@
                   <div id="u2918" class="ax_default label">
                     <div id="u2918_div" class=""></div>
                     <div id="u2918_text" class="text ">
-                      <p><span>350条</span></p>
+                      <p style="font-size:20px;"><span style="font-size:36px;">1100</span><span>豆</span></p>
                     </div>
                   </div>
 
@@ -711,7 +711,7 @@
                 <div id="u2920" class="ax_default label">
                   <div id="u2920_div" class=""></div>
                   <div id="u2920_text" class="text ">
-                    <p><span>报文充值套餐</span></p>
+                    <p><span>星豆充值套餐</span></p>
                   </div>
                 </div>
 
@@ -735,7 +735,7 @@
                   <div id="u2924" class="ax_default label">
                     <div id="u2924_div" class=""></div>
                     <div id="u2924_text" class="text ">
-                      <p><span>1800条</span></p>
+                      <p style="font-size:20px;"><span style="font-size:36px;">5700</span><span>豆</span></p>
                     </div>
                   </div>
 
@@ -2556,6 +2556,192 @@
                 <!-- Unnamed (图片) -->
                 <div id="u3233" class="ax_default _图片">
                   <img id="u3233_img" class="img " src="images/数据统计/u99.png"/>
+                </div>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u3234" class="ax_default box_1">
+                <div id="u3234_div" class=""></div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u3235" class="ax_default" data-left="162" data-top="2789" data-width="184" data-height="67">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3236" class="ax_default box_1">
+                  <div id="u3236_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3237" class="ax_default label">
+                  <div id="u3237_div" class=""></div>
+                  <div id="u3237_text" class="text ">
+                    <p><span>10元</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3238" class="ax_default label">
+                  <div id="u3238_div" class=""></div>
+                  <div id="u3238_text" class="text ">
+                    <p style="font-size:20px;"><span style="font-size:36px;">100</span><span>豆</span></p>
+                  </div>
+                </div>
+
+                <!-- 关闭 (矩形) -->
+                <div id="u3239" class="ax_default box_2 ax_default_hidden" data-label="关闭" style="display:none; visibility: hidden">
+                  <div id="u3239_div" class=""></div>
+                  <div id="u3239_text" class="text ">
+                    <p><span>X</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u3240" class="ax_default label">
+                <div id="u3240_div" class=""></div>
+                <div id="u3240_text" class="text ">
+                  <p><span>星豆充值套餐</span></p>
+                </div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u3241" class="ax_default" data-left="366" data-top="2789" data-width="184" data-height="67">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3242" class="ax_default box_1">
+                  <div id="u3242_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3243" class="ax_default label">
+                  <div id="u3243_div" class=""></div>
+                  <div id="u3243_text" class="text ">
+                    <p><span>50元</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3244" class="ax_default label">
+                  <div id="u3244_div" class=""></div>
+                  <div id="u3244_text" class="text ">
+                    <p style="font-size:20px;"><span style="font-size:36px;">500</span><span>豆</span></p>
+                  </div>
+                </div>
+
+                <!-- 关闭 (矩形) -->
+                <div id="u3245" class="ax_default box_2 ax_default_hidden" data-label="关闭" style="display:none; visibility: hidden">
+                  <div id="u3245_div" class=""></div>
+                  <div id="u3245_text" class="text ">
+                    <p><span>X</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u3246" class="ax_default" data-left="570" data-top="2789" data-width="184" data-height="67">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3247" class="ax_default box_1">
+                  <div id="u3247_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3248" class="ax_default label">
+                  <div id="u3248_div" class=""></div>
+                  <div id="u3248_text" class="text ">
+                    <p><span>100元</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3249" class="ax_default label">
+                  <div id="u3249_div" class=""></div>
+                  <div id="u3249_text" class="text ">
+                    <p style="font-size:20px;"><span style="font-size:36px;">1050</span><span>豆</span></p>
+                  </div>
+                </div>
+
+                <!-- 关闭 (矩形) -->
+                <div id="u3250" class="ax_default box_2 ax_default_hidden" data-label="关闭" style="display:none; visibility: hidden">
+                  <div id="u3250_div" class=""></div>
+                  <div id="u3250_text" class="text ">
+                    <p><span>X</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u3251" class="ax_default" data-left="780" data-top="2789" data-width="184" data-height="67">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3252" class="ax_default box_1">
+                  <div id="u3252_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3253" class="ax_default label">
+                  <div id="u3253_div" class=""></div>
+                  <div id="u3253_text" class="text ">
+                    <p><span>200元</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3254" class="ax_default label">
+                  <div id="u3254_div" class=""></div>
+                  <div id="u3254_text" class="text ">
+                    <p style="font-size:20px;"><span style="font-size:36px;">2150</span><span>豆</span></p>
+                  </div>
+                </div>
+
+                <!-- 关闭 (矩形) -->
+                <div id="u3255" class="ax_default box_2 ax_default_hidden" data-label="关闭" style="display:none; visibility: hidden">
+                  <div id="u3255_div" class=""></div>
+                  <div id="u3255_text" class="text ">
+                    <p><span>X</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u3256" class="ax_default" data-left="162" data-top="2866" data-width="184" data-height="67">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3257" class="ax_default box_1">
+                  <div id="u3257_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3258" class="ax_default label">
+                  <div id="u3258_div" class=""></div>
+                  <div id="u3258_text" class="text ">
+                    <p><span>500元</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u3259" class="ax_default label">
+                  <div id="u3259_div" class=""></div>
+                  <div id="u3259_text" class="text ">
+                    <p style="font-size:20px;"><span style="font-size:36px;">5700</span><span>豆</span></p>
+                  </div>
+                </div>
+
+                <!-- 关闭 (矩形) -->
+                <div id="u3260" class="ax_default box_2 ax_default_hidden" data-label="关闭" style="display:none; visibility: hidden">
+                  <div id="u3260_div" class=""></div>
+                  <div id="u3260_text" class="text ">
+                    <p><span>X</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u3261" class="ax_default box_1">
+                <div id="u3261_div" class=""></div>
+                <div id="u3261_text" class="text ">
+                  <p><span>+ 添加套餐</span></p>
                 </div>
               </div>
             </div>
