--- a/TDWT_MSG/企业用户详情.html
+++ b/TDWT_MSG/企业用户详情.html
@@ -448,7 +448,7 @@
             </div>
 
             <!-- Unnamed (组合) -->
-            <div id="u1407" class="ax_default" data-left="160" data-top="489" data-width="156" data-height="22">
+            <div id="u1407" class="ax_default" data-left="160" data-top="497" data-width="156" data-height="22">
 
               <!-- Unnamed (矩形) -->
               <div id="u1408" class="ax_default label">
@@ -897,7 +897,7 @@
               <div id="u1474" class="ax_default label">
                 <div id="u1474_div" class=""></div>
                 <div id="u1474_text" class="text ">
-                  <p><span>企业用户</span></p>
+                  <p><span>下级企业用户</span></p>
                 </div>
               </div>
 
@@ -1401,6 +1401,31 @@
             <!-- Unnamed (图片) -->
             <div id="u1549" class="ax_default _图片">
               <img id="u1549_img" class="img " src="images/数据统计/u99.png"/>
+            </div>
+
+            <!-- Unnamed (组合) -->
+            <div id="u1550" class="ax_default" data-left="160" data-top="457" data-width="125" data-height="22">
+
+              <!-- Unnamed (矩形) -->
+              <div id="u1551" class="ax_default label">
+                <div id="u1551_div" class=""></div>
+                <div id="u1551_text" class="text ">
+                  <p><span>星豆：</span></p>
+                </div>
+              </div>
+
+              <!-- Unnamed (图片) -->
+              <div id="u1552" class="ax_default _图片">
+                <img id="u1552_img" class="img " src="images/企业用户详情/u1365.png"/>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u1553" class="ax_default label">
+                <div id="u1553_div" class=""></div>
+                <div id="u1553_text" class="text ">
+                  <p><span>10000豆</span></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
