--- a/TDWT_MSG/发布通知.html
+++ b/TDWT_MSG/发布通知.html
@@ -249,190 +249,343 @@
                 </div>
               </div>
 
-              <!-- Unnamed (矩形) -->
-              <div id="u2765" class="ax_default label">
-                <div id="u2765_div" class=""></div>
-                <div id="u2765_text" class="text ">
-                  <p><span>通知内容：</span></p>
-                </div>
-              </div>
-
               <!-- Unnamed (底部) -->
 
               <!-- Unnamed (组合) -->
-              <div id="u2767" class="ax_default" data-left="0" data-top="0" data-width="1200" data-height="82">
+              <div id="u2766" class="ax_default" data-left="0" data-top="0" data-width="1200" data-height="82">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2768" class="ax_default box_2">
-                  <div id="u2768_div" class=""></div>
+                <div id="u2767" class="ax_default box_2">
+                  <div id="u2767_div" class=""></div>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2769" class="ax_default label">
-                  <div id="u2769_div" class=""></div>
-                  <div id="u2769_text" class="text ">
+                <div id="u2768" class="ax_default label">
+                  <div id="u2768_div" class=""></div>
+                  <div id="u2768_text" class="text ">
                     <p><span>Copyright © 2018 Pancoit All Rights Reserved&nbsp; 粤ICP备17155728号-3</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u2770" class="ax_default primary_button">
-                <div id="u2770_div" class=""></div>
-                <div id="u2770_text" class="text ">
+              <div id="u2769" class="ax_default primary_button">
+                <div id="u2769_div" class=""></div>
+                <div id="u2769_text" class="text ">
                   <p><span>发布</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2771" class="ax_default" data-left="256" data-top="223" data-width="51" data-height="20">
+              <div id="u2770" class="ax_default" data-left="256" data-top="256" data-width="65" data-height="20">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u2771" class="ax_default label">
+                  <div id="u2771_div" class=""></div>
+                  <div id="u2771_text" class="text ">
+                    <p><span>所有人</span></p>
+                  </div>
+                </div>
 
                 <!-- Unnamed (图片) -->
                 <div id="u2772" class="ax_default _图片">
-                  <img id="u2772_img" class="img " src="images/控制台/u236.png"/>
-                </div>
-
-                <!-- Unnamed (矩形) -->
-                <div id="u2773" class="ax_default label">
-                  <div id="u2773_div" class=""></div>
-                  <div id="u2773_text" class="text ">
-                    <p><span>全部</span></p>
-                  </div>
+                  <img id="u2772_img" class="img " src="images/控制台/u429.png"/>
                 </div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2774" class="ax_default" data-left="333" data-top="223" data-width="79" data-height="20">
+              <div id="u2773" class="ax_default" data-left="339" data-top="256" data-width="79" data-height="20">
 
                 <!-- Unnamed (图片) -->
-                <div id="u2775" class="ax_default _图片">
-                  <img id="u2775_img" class="img " src="images/控制台/u429.png"/>
+                <div id="u2774" class="ax_default _图片">
+                  <img id="u2774_img" class="img " src="images/控制台/u429.png"/>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2776" class="ax_default label">
-                  <div id="u2776_div" class=""></div>
-                  <div id="u2776_text" class="text ">
+                <div id="u2775" class="ax_default label">
+                  <div id="u2775_div" class=""></div>
+                  <div id="u2775_text" class="text ">
                     <p><span>企业用户</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2777" class="ax_default" data-left="440" data-top="223" data-width="78" data-height="20">
-
-                <!-- Unnamed (图片) -->
-                <div id="u2778" class="ax_default _图片">
-                  <img id="u2778_img" class="img " src="images/控制台/u429.png"/>
-                </div>
+              <div id="u2776" class="ax_default" data-left="440" data-top="256" data-width="78" data-height="20">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2779" class="ax_default label">
-                  <div id="u2779_div" class=""></div>
-                  <div id="u2779_text" class="text ">
+                <div id="u2777" class="ax_default label">
+                  <div id="u2777_div" class=""></div>
+                  <div id="u2777_text" class="text ">
                     <p><span>APP用户</span></p>
                   </div>
                 </div>
-              </div>
-
-              <!-- Unnamed (组合) -->
-              <div id="u2780" class="ax_default" data-left="256" data-top="253" data-width="51" data-height="20">
 
                 <!-- Unnamed (图片) -->
-                <div id="u2781" class="ax_default _图片">
-                  <img id="u2781_img" class="img " src="images/控制台/u236.png"/>
-                </div>
-
-                <!-- Unnamed (矩形) -->
-                <div id="u2782" class="ax_default label">
-                  <div id="u2782_div" class=""></div>
-                  <div id="u2782_text" class="text ">
-                    <p><span>图文</span></p>
-                  </div>
+                <div id="u2778" class="ax_default _图片">
+                  <img id="u2778_img" class="img " src="images/控制台/u236.png"/>
                 </div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2783" class="ax_default" data-left="333" data-top="253" data-width="79" data-height="20">
-
-                <!-- Unnamed (图片) -->
-                <div id="u2784" class="ax_default _图片">
-                  <img id="u2784_img" class="img " src="images/控制台/u429.png"/>
-                </div>
+              <div id="u2779" class="ax_default" data-left="256" data-top="288" data-width="399" data-height="36">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2785" class="ax_default label">
-                  <div id="u2785_div" class=""></div>
-                  <div id="u2785_text" class="text ">
-                    <p><span>网页链接</span></p>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Unnamed (组合) -->
-              <div id="u2786" class="ax_default" data-left="256" data-top="285" data-width="399" data-height="36">
-
-                <!-- Unnamed (矩形) -->
-                <div id="u2787" class="ax_default box_1">
-                  <div id="u2787_div" class=""></div>
+                <div id="u2780" class="ax_default box_1">
+                  <div id="u2780_div" class=""></div>
                 </div>
 
                 <!-- Unnamed (文本框) -->
-                <div id="u2788" class="ax_default text_field">
-                  <input id="u2788_input" type="text" value=""/>
+                <div id="u2781" class="ax_default text_field">
+                  <input id="u2781_input" type="text" value=""/>
                 </div>
-              </div>
-
-              <!-- Unnamed (矩形) -->
-              <div id="u2789" class="ax_default box_1">
-                <div id="u2789_div" class=""></div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2790" class="ax_default" data-left="322" data-top="629" data-width="79" data-height="20">
+              <div id="u2782" class="ax_default" data-left="322" data-top="751" data-width="79" data-height="20">
 
                 <!-- Unnamed (图片) -->
-                <div id="u2791" class="ax_default _图片">
-                  <img id="u2791_img" class="img " src="images/控制台/u236.png"/>
+                <div id="u2783" class="ax_default _图片">
+                  <img id="u2783_img" class="img " src="images/控制台/u236.png"/>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2792" class="ax_default label">
-                  <div id="u2792_div" class=""></div>
-                  <div id="u2792_text" class="text ">
+                <div id="u2784" class="ax_default label">
+                  <div id="u2784_div" class=""></div>
+                  <div id="u2784_text" class="text ">
                     <p><span>立即发送</span></p>
                   </div>
                 </div>
               </div>
 
               <!-- Unnamed (图片) -->
-              <div id="u2793" class="ax_default _图片">
-                <img id="u2793_img" class="img " src="images/控制台/u429.png"/>
+              <div id="u2785" class="ax_default _图片">
+                <img id="u2785_img" class="img " src="images/控制台/u429.png"/>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u2794" class="ax_default" data-left="450" data-top="621" data-width="209" data-height="36">
+              <div id="u2786" class="ax_default" data-left="450" data-top="743" data-width="209" data-height="36">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2795" class="ax_default box_1">
-                  <div id="u2795_div" class=""></div>
+                <div id="u2787" class="ax_default box_1">
+                  <div id="u2787_div" class=""></div>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2796" class="ax_default box_1">
-                  <div id="u2796_div" class=""></div>
+                <div id="u2788" class="ax_default box_1">
+                  <div id="u2788_div" class=""></div>
                 </div>
 
                 <!-- Unnamed (图片) -->
-                <div id="u2797" class="ax_default _图片">
-                  <img id="u2797_img" class="img " src="images/轨迹/u1885.png"/>
+                <div id="u2789" class="ax_default _图片">
+                  <img id="u2789_img" class="img " src="images/轨迹/u1885.png"/>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u2798" class="ax_default label">
-                  <div id="u2798_div" class=""></div>
-                  <div id="u2798_text" class="text ">
+                <div id="u2790" class="ax_default label">
+                  <div id="u2790_div" class=""></div>
+                  <div id="u2790_text" class="text ">
                     <p><span>2019-04-12 00:00:00</span></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 文章按钮 (矩形) -->
+              <div id="u2791" class="ax_default box_1 selected" data-label="文章按钮">
+                <div id="u2791_div" class="selected"></div>
+                <div id="u2791_text" class="text ">
+                  <p><span>文章</span></p>
+                </div>
+              </div>
+
+              <!-- 活动按钮 (矩形) -->
+              <div id="u2792" class="ax_default box_1" data-label="活动按钮">
+                <div id="u2792_div" class=""></div>
+                <div id="u2792_text" class="text ">
+                  <p><span>活动</span></p>
+                </div>
+              </div>
+
+              <!-- 奖励按钮 (矩形) -->
+              <div id="u2793" class="ax_default box_1" data-label="奖励按钮">
+                <div id="u2793_div" class=""></div>
+                <div id="u2793_text" class="text ">
+                  <p><span>奖励</span></p>
+                </div>
+              </div>
+
+              <!-- 通知类型 (动态面板) -->
+              <div id="u2794" class="ax_default" data-label="通知类型">
+                <div id="u2794_state0" class="panel_state" data-label="文章" style="">
+                  <div id="u2794_state0_content" class="panel_state_content">
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2795" class="ax_default box_1">
+                      <img id="u2795_img" class="img " src="images/发布通知/u2795.png"/>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2796" class="ax_default label">
+                      <div id="u2796_div" class=""></div>
+                      <div id="u2796_text" class="text ">
+                        <p><span>通知内容：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2797" class="ax_default box_1">
+                      <div id="u2797_div" class=""></div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2798" class="ax_default box_2">
+                      <div id="u2798_div" class=""></div>
+                      <div id="u2798_text" class="text ">
+                        <p><span>格式化工具</span></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="u2794_state1" class="panel_state" data-label="活动" style="visibility: hidden;">
+                  <div id="u2794_state1_content" class="panel_state_content">
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2799" class="ax_default box_1">
+                      <img id="u2799_img" class="img " src="images/发布通知/u2799.png"/>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2800" class="ax_default label">
+                      <div id="u2800_div" class=""></div>
+                      <div id="u2800_text" class="text ">
+                        <p><span>活动简述：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2801" class="ax_default box_1">
+                      <div id="u2801_div" class=""></div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2802" class="ax_default label">
+                      <div id="u2802_div" class=""></div>
+                      <div id="u2802_text" class="text ">
+                        <p><span>活动图片：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2803" class="ax_default primary_button">
+                      <div id="u2803_div" class=""></div>
+                      <div id="u2803_text" class="text ">
+                        <p><span>选择</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (图片) -->
+                    <div id="u2804" class="ax_default _图片">
+                      <img id="u2804_img" class="img " src="images/发布通知/u2804.png"/>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2805" class="ax_default label">
+                      <div id="u2805_div" class=""></div>
+                      <div id="u2805_text" class="text ">
+                        <p><span>宽 : 高 = 2 : 1</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2806" class="ax_default label">
+                      <div id="u2806_div" class=""></div>
+                      <div id="u2806_text" class="text ">
+                        <p><span>活动地址：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (组合) -->
+                    <div id="u2807" class="ax_default" data-left="81" data-top="333" data-width="399" data-height="36">
+
+                      <!-- Unnamed (矩形) -->
+                      <div id="u2808" class="ax_default box_1">
+                        <div id="u2808_div" class=""></div>
+                      </div>
+
+                      <!-- Unnamed (文本框) -->
+                      <div id="u2809" class="ax_default text_field">
+                        <input id="u2809_input" type="text" value=""/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="u2794_state2" class="panel_state" data-label="奖励" style="visibility: hidden;">
+                  <div id="u2794_state2_content" class="panel_state_content">
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2810" class="ax_default box_1">
+                      <img id="u2810_img" class="img " src="images/发布通知/u2810.png"/>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2811" class="ax_default label">
+                      <div id="u2811_div" class=""></div>
+                      <div id="u2811_text" class="text ">
+                        <p><span>奖励简述：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2812" class="ax_default box_1">
+                      <div id="u2812_div" class=""></div>
+                    </div>
+
+                    <!-- Unnamed (矩形) -->
+                    <div id="u2813" class="ax_default label">
+                      <div id="u2813_div" class=""></div>
+                      <div id="u2813_text" class="text ">
+                        <p><span>奖励星豆：</span></p>
+                      </div>
+                    </div>
+
+                    <!-- Unnamed (组合) -->
+                    <div id="u2814" class="ax_default" data-left="71" data-top="162" data-width="111" data-height="36">
+
+                      <!-- Unnamed (矩形) -->
+                      <div id="u2815" class="ax_default box_1">
+                        <div id="u2815_div" class=""></div>
+                      </div>
+
+                      <!-- Unnamed (文本框) -->
+                      <div id="u2816" class="ax_default text_field">
+                        <input id="u2816_input" type="text" value=""/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Unnamed (组合) -->
+              <div id="u2817" class="ax_default" data-left="538" data-top="252" data-width="202" data-height="30">
+
+                <!-- Unnamed (矩形) -->
+                <div id="u2818" class="ax_default box_1">
+                  <div id="u2818_div" class=""></div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u2819" class="ax_default label">
+                  <div id="u2819_div" class=""></div>
+                  <div id="u2819_text" class="text ">
+                    <p><span>指定账号：</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u2820" class="ax_default label">
+                  <div id="u2820_div" class=""></div>
+                  <div id="u2820_text" class="text ">
+                    <p><span>不指定账号代表全部人</span></p>
                   </div>
                 </div>
               </div>
